background image updated in the jumbotron due to visibility issue

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -28,25 +28,15 @@
   margin-top: 45px;
   height: 425px;
   overflow: hidden;
-  background: transparent !important;
-  &::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-image: asset-url('jumbo-bg.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    transform: rotate(180deg);
-  }
+  background-image: asset-url('jumbo-bg.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #page-content {
   flex: 1 0 auto;
+  background-color: lightgrey;
 }
 
 #sticky-footer {
